Fix navbar spacing

--- a/shared/navbar.css
+++ b/shared/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
-  display: grid;
-  grid: repeat(2, auto) / max-content 1fr auto auto;
+  display: flex;
+  flex-direction: column;
   padding: 1.5rem 0 1rem 0;
   border-bottom: 1px solid var(--grey-3);
   position: fixed;
@@ -13,7 +13,7 @@
 .navbar__logo {
   width: 100%;
   max-width: 3rem;
-  margin: 0 1rem 0 1.5rem;
+  margin-right: 1rem;
 }
 
 .textbox--search {
@@ -23,15 +23,25 @@
   padding: 0 1.5rem;
 }
 
+.navbar__search-wrapper {
+  flex: 1;
+  padding-right: 1.5rem;
+}
+
 .navbar__btn {
   display: none;
 }
 
-.navbar__btn:last-of-type {
-  margin-right: 1.5rem;
+.navbar__search-wrapper + .navbar__btn {
+  margin-left: 1.5rem;
 }
 
-@media screen and (min-width: 400px) {
+.navbar__top-wrapper {
+  padding: 0 1.5rem;
+  display: flex;
+}
+
+@media screen and (min-width: 500px) {
   .navbar__btn {
     display: flex;
     align-items: center;
@@ -45,7 +55,6 @@
   width: 100%;
   max-width: 3rem;
   border-radius: 50%;
-  margin-right: 1.5rem;
   margin-left: 1rem;
 }
 
@@ -95,7 +104,7 @@
   max-width: 6rem;
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 450px) {
   .categories {
     font-size: var(--font-lg);
     padding: 2rem 5.5rem 0 4rem;
